<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purewhite"
    tools:context=".createAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/Black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_account_username"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_name"
            android:drawablePadding="12dp"
            android:hint="@string/yourname"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            android:cursorVisible="true"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <EditText
            android:id="@+id/create_account_email_input"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <EditText
            android:id="@+id/create_account_phonenumber_input"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="12dp"
            android:hint="@string/phonenumber"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="number"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <EditText
            android:id="@+id/create_account_address_input"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_location"
            android:drawablePadding="12dp"
            android:hint="@string/address"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>


        <EditText
            android:id="@+id/create_account_password"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_password"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:textColor="@color/Black"
            android:background="@drawable/input_design">

        </EditText>

        <EditText
            android:id="@+id/create_account_confirmpassword"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_password"
            android:drawablePadding="12dp"
            android:hint="@string/confirmpassword"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <Button
            android:id="@+id/Admin_Register_Button"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Register"
            android:textAllCaps="false"
            android:background="@drawable/buttons"
            android:textColor="@color/purewhite"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/termsAndconditions"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>