<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purewhite"
    tools:context=".createAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Profile Information"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/Black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/adminNameUpdate"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_name"
            android:drawablePadding="12dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_design"
            android:elevation="5dp"
            android:hint="@string/yourname"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/adminEmailUpdate"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingLeft="15dp"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <EditText
            android:id="@+id/adminPhoneUpdate"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:hint="@string/phonenumber"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="12dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingLeft="15dp"
            android:inputType="number"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>

        <EditText
            android:id="@+id/adminAddressUpdate"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:hint="@string/address"
            android:drawableStart="@drawable/ic_baseline_location"
            android:drawablePadding="12dp"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingLeft="15dp"
            android:inputType="text"
            android:textColor="@color/Black"
            android:background="@drawable/input_design"/>






        <Button
            android:id="@+id/updatebtn2"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="Update"
            android:textAllCaps="false"
            android:background="@drawable/buttons"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="19sp"/>



    </LinearLayout>
</RelativeLayout>